<resources>
    <string name="app_name">PortTown</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="resource_wood">Wood</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="resource_coal">Coal</string>
    <string name="resource_iron">Iron</string>
    <string name="resource_gold">Gold</string>
    <string name="building_farm">Farm</string>
    <string name="building_workshop">Workshop</string>
    <string name="building_gold_mine">Gold mine</string>
    <string name="building_coal_mine">Coal mine</string>
    <string name="building_iron_mine">Iron mine</string>
    <string name="building_quarry">Quarry</string>
    <string name="building_saw_mill">Saw mill</string>
    <string name="building_food_silo">Food silo</string>
    <string name="building_palace">Palace</string>
    <string name="building_storage">Warehouse</string>
    <string name="usage_storage">Storage</string>
    <string name="usage_production">Production</string>
    <string name="resource_stone">Stone</string>
    <string name="resource_food">Food</string>
    <string name="resource_content_description">Resource</string>
    <string name="quantity_hint">Quantity</string>
    <string name="button_buy">Buy</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="market">Market</string>
    <string name="town">Town</string>
    <string name="text_game">Game</string>
    <string name="lvl">Lvl.</string>
</resources>